Fixing bug 333733. Could leak attr in nsFrameUtil::Tag::ReadAttrs. r+sr=dbaron@mozilla.com